# nixos-config

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .mcp.json  .sops.yaml  AGENTS.md  CLAUDE.md  Makefile  PROMPT_build.md  PROMPT_plan.md  PROMPT_review.md  README.md  claude.sh  flake.nix  loop.sh  nix.custom.conf.before-nix-darwin2  omarchy-packages-uninstall.sh  omarchy-packages.sh  skills-lock.json
mcp_agent_mail/: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  Dockerfile  LICENSE  Makefile  PLAN_TO_ENABLE_EASY_AND_SECURE_SHARING_OF_AGENT_MAILBOX.md  PLAN_TO_NON_DISRUPTIVELY_INTEGRATE_WITH_THE_GIT_WORKTREE_APPROACH.md  README.md  cline.mcp.json  compose.yaml  cursor.mcp.json  docker-compose.yml  gemini.mcp.json  project_idea_and_guide.md  pyproject.toml  windsurf.mcp.json
mcp_agent_mail/.github/workflows/: acfs-checksums-dispatch.yml  ci.yml  nightly.yml  notify-acfs.yml  release.yml
mcp_agent_mail/deploy/: gunicorn.conf.py
mcp_agent_mail/deploy/capabilities/: agent_capabilities.example.yaml  agent_capabilities.json
mcp_agent_mail/deploy/logrotate/: mcp-agent-mail
mcp_agent_mail/deploy/observability/: prometheus_rules.sample.yml
mcp_agent_mail/docs/: GUIDE_TO_OPTIMAL_MCP_SERVER_DESIGN.md  observability.md  operations_alignment_checklist.md
mcp_agent_mail/docs/adr/: README.md  (+1 more)
mcp_agent_mail/examples/: client_bootstrap.py
mcp_agent_mail/scripts/: automatically_detect_all_installed_coding_agents_and_install_mcp_agent_mail_in_all.sh  bootstrap.sh  check_console_environment.py  deploy.sh  install.sh  integrate_claude_code.sh  integrate_cline.sh  integrate_codex_cli.sh  integrate_cursor.sh  integrate_factory_droid.sh  integrate_gemini_cli.sh  integrate_github_copilot.sh  integrate_opencode.sh  integrate_windsurf.sh  integration_showcase.py  lib.sh  run_server_with_token.sh  share_to_github_pages.py  test_bd_path_snippet_rewrite.sh  test_endpoints.sh  test_guard.sh  test_rich_output.py  test_run_server_directly.sh  update_sqlite_vendor.py
mcp_agent_mail/tests/: conftest.py  test_ack_views_details.py  test_agent_name_validation.py  test_am_run_basic.py  test_app_helpers.py  test_archive_browser.py  test_attachment_policy.py  test_attachments_extended.py  test_broadcast.py  test_claim_overlap_and_macro_failures.py  test_cli.py  test_cli_acks_and_errors.py  test_cli_additional.py  test_cli_archive_commands.py  test_cli_extended.py  test_cli_guard_commands.py  test_cli_list_acks_and_main.py  test_cli_mail_commands.py  test_cli_stub.py  test_clone_identity_equivalence.py  test_concurrency_agents.py  test_concurrent_writes.py  test_contact_and_routing.py  test_contact_management_flow.py  test_contact_policy.py  test_contacts.py  test_database_failures.py  test_datetime_regression.py  test_db_migrations_and_http_main.py  test_e2e_disaster_recovery.py  test_e2e_multi_agent_workflow.py  test_entry_and_llm_errors.py  test_entrypoints_and_llm.py  test_error_invalid_inputs.py  test_expected_error_filter.py  test_file_reservation_lifecycle.py  test_git_archive_failures.py  test_git_index_lock.py  test_guard_edges.py  test_guard_integration.py  (+74 more)
mcp_agent_mail/third_party_docs/: PYTHON_FASTMCP_BEST_PRACTICES.md  fastmcp_distilled_docs.md  mcp_protocol_specs.md  sqlite_json_distilled_docs.md
mcp_agent_mail/web/: index.html
(+364 files in other folders)
